@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-11-13
+DATE: 11/07/2017
+STAFF: sc
+CHANGES: TR12607 exclude cre transgene refs from GO QC 14
+
 TAG: qcreports_db-6-0-11-12
 TAG: qcreports_db-6-0-11-11
 TAG: qcreports_db-6-0-11-10
